[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond-video"
version = "0.1.0"
description = "Open, private, cross-platform dashcam automation."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"

authors = [
    { name = "Christer R. (sssreh)" }
]

keywords = [
    "blackvue",
    "dashcam",
    "automation",
    "synology",
    "python"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "faster-whisper>=1.0",
    "argostranslate>=1.9",
    "pyannote.audio>=4.0",
    "Pillow>=10.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "Jinja2>=3.0",
]

[project.scripts]
bv-ls = "blackvue.cli.bv_ls:main"
bv-download = "blackvue.cli.bv_download:main"
bv-config = "blackvue.cli.bv_config:main"
bv-generate = "blackvue.cli.bv_generate:main"
bv-lang = "blackvue.cli.bv_lang:main"
bv-export = "blackvue.cli.bv_export:main"
bv-web = "blackvue.cli.bv_web:main"
