[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond-video"
version = "0.1.0"
description = "Open, private, cross-platform dashcam automation."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"

authors = [
    { name = "Christer R. (sssreh)" }
]

keywords = [
    "blackvue",
    "dashcam",
    "automation",
    "synology",
    "python"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Pillow>=10.0",
]

# bv-download/bv-config/bv-ls/bv-export's core (non-transcribe) work
# only needs the base dependencies above (Pillow, for map/mirror-icon
# image work) - none of these three groups are imported at module
# level anywhere in src/ (see e.g. cli/bv_lang.py, generate/speech.py:
# faster-whisper/pyannote.audio/argostranslate are always imported
# lazily, inside the function that needs them, raising a clean
# MediaToolError if missing), so a plain `pip install .` keeps working
# without any of them - installing an extra only matters once you
# actually run a command that needs it.
[project.optional-dependencies]
# bv-generate --transcribe/--diarize.
speech = [
    "faster-whisper>=1.0",
    "pyannote.audio>=4.0",
]
# bv-generate --translate, bv-lang.
translate = [
    "argostranslate>=1.9",
]
# bv-web. Deliberately its own group, not bundled with the above -
# the Docker image bv-web actually runs in (see Dockerfile) has no
# need to pull in faster-whisper/pyannote.audio/argostranslate (and
# torch, transitively) just to serve trip-browsing pages.
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "Jinja2>=3.0",
]

[project.scripts]
bv-ls = "blackvue.cli.bv_ls:main"
bv-download = "blackvue.cli.bv_download:main"
bv-config = "blackvue.cli.bv_config:main"
bv-generate = "blackvue.cli.bv_generate:main"
bv-lang = "blackvue.cli.bv_lang:main"
bv-export = "blackvue.cli.bv_export:main"
bv-web = "blackvue.cli.bv_web:main"

# setuptools only bundles .py files into the installed wheel by
# default - without this, web/templates/*.html (login.html,
# trip_list.html, ...) silently get left out of `pip install .`,
# which is exactly what happened on the real NAS install: bv-web
# imported and ran fine, but every page 500'd with
# jinja2.exceptions.TemplateNotFound the moment it tried to render
# one, since site-packages/blackvue/web/templates/ didn't exist at
# all.
[tool.setuptools.package-data]
"blackvue.web" = ["templates/*.html"]
